Moving symbolic expressions